2000-05-02   Daiki Ueno  <ueno@unixuser.org>

	* pgg-gpg.el (pgg-scheme-encrypt-region): Don't quote recipient;
	concatenate all arguments destructively.

2000-04-17  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* EMY 1.13.5 is released.

2000-04-17  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-view.el (mime-view-insert-entity-button): Don't pass
	invisible to mime-insert-button.

2000-04-15  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-view.el (mime-preview-text): Ask Content-Transfer-Encoding.
	(mime-display-text): New function.

2000-04-14  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-view.el (mime-display-gzipped): Use decode-coding-string.

2000-04-13   Daiki Ueno  <ueno@unixuser.org>

	* pgg-gpg.el: Fix author's mailing address.
	(pgg-gpg-process-region): Add --output option; set status fd to 2.
	(pgg-gpg-possibly-cache-passphrase): New function.
	(pgg-gpg-shell-file-name): Abolish.
	(pgg-gpg-shell-command-switch): Abolish.
	(pgg-scheme-lookup-key): Work on temp buffer.

2000-03-20  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-view.el (mime-preview-follow-current-entity): Fix the bug
	without header part.
	(mime-preview-entity-boundary): Fix the case that last part
	is composite type.

2000-03-18  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-view.el (mime-display-gzipped): Temporaly hack for FSF Emacs
	until new FLIM is released.

2000-03-16  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-view.el (mime-display-gzipped): Make it FSF Emacs friendly.

2000-03-14  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-view.el (mime-display-gzipped): Remove arguments.
	autodetect coding system.

2000-03-01  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-image.el (mime-display-image): Don't wait for redisplay.

2000-02-23   Daiki Ueno  <ueno@ueda.info.waseda.ac.jp>

	* mime-image.el
	(mime-image-normalize-xbm-buffer): New inline function.
	(mime-image-create) [XEmacs || Emacs21]: Use it for XBM data.
	(mime-display-image): Don't create temporary file.
